fix: Comment out overflow property in body styles

--- a/Frontend/panel/styles/style.css
+++ b/Frontend/panel/styles/style.css
@@ -27,7 +27,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* gap: 30px; */
 }
 
